tests/ui/fail/relation_breaks_fk_struct_does_not_exists.stderr
error: Can't find Sqlo struct `SomeWrongStruct`
  --> tests/ui/fail/relation_breaks_fk_struct_does_not_exists.rs:12:10
   |
12 | #[derive(Sqlo, PartialEq, Debug)]
   |          ^^^^
   |
   = note: this error originates in the derive macro `Sqlo` (in Nightly builds, run with -Z macro-backtrace for more info)
